on n'est jamais mieux servi que par soi meme

--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,8 @@
 .\#*
 *\#
 
-# ignore private notes
-private/
+# ignore node files
+node_modules/
+package-lock.json
 
-# jekyll
-_site
-.sass-cache
-.jekyll-cache
-.jekyll-metadata
-vendor
+private/
