--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "app.js",
     "scripts": {
 	"test": "echo \"Error: no test specified\" && exit 1",
-	"build": "node app.js"
+	"build": "CI=true node app.js"
     },
     "keywords": [],
     "author": "challeau",
