--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "my-notes",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.18.2",
-    "jsdom": "^22.1.0",
-    "marked": "^11.2.0",
-    "nodemon": "^3.0.1",
-    "pug": "^3.0.2",
-    "sanitize-html": "^2.11.0"
-  }
+    "name": "my-notes",
+    "version": "1.0.0",
+    "description": "",
+    "main": "app.js",
+    "scripts": {
+	"clean": "find ./resources -type f -name '*.md' | xargs sed -i \"s/’/'/g\" ; find ./resources -type f -name '*.md' | xargs sed -i 's/”/\"/g' ; find ./resources -type f -name '*.md' | xargs sed -i 's/“/\"/g'",
+	"test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "Chlotte",
+    "license": "ISC",
+    "dependencies": {
+	"express": "^4.18.2",
+	"jsdom": "^22.1.0",
+	"marked": "^11.2.0",
+	"nodemon": "^3.0.1",
+	"pug": "^3.0.2",
+	"sanitize-html": "^2.11.0"
+    }
 }
